--- a/front/public/index.html
+++ b/front/public/index.html
@@ -25,8 +25,10 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" /> -->
+    <link rel="manifest" href="https://artalux.com/manifest.json" />
+    <link rel="shortcut icon" href="https://artalux.com/favicon.png" />
     <link
       rel="apple-touch-icon"
       sizes="76x76"
